# Snowflake_Old

./: .gitignore  .gitignore.orig  .gitignore.swp  .gitmodules  NodesAndParamaters.md  README.md  Vagrantfile  leftcam.yaml  local_config.rb  local_setup  local_setup.rb  logitech.yaml  usb_ordering.txt
src/.../: CMakeLists.txt
src/.../src/: avalanche_driver.h  elsa_driver.cpp
src/ION/: .CMakeLists.txt.swp  .package.xml.swp  CMakeLists.txt  START.launch  package.xml
src/ION/cmake-modules/: Catch.cmake
src/ION/decision_tree/: CMakeLists.txt  TestingProgress.txt  decision_tree.cpp  decision_tree.hpp  main.cpp  test.cpp
src/ION/include/ION/decision/move_straight_line/: MoveStraightLine.hpp
src/ION/include/ION/decision/pathfinder/: Pathfinder.h  TIle.h~
src/ION/launch/: START.launch  copy_hokuyo_start.launch  hokuyo_start.launch  hokuyo_start.launch~  sick_lidar_start.launch  sick_lidar_start.launch~
src/ION/rviz/: ION1.rviz
src/ION/scripts/: sb_gyro_accelerometer.py
src/ION/src/: CMakeLists.txt
src/ION/src/decision/: .avoidPole.cpp.swp  CMakeLists.txt  README.md  moveStraightLine.cpp
src/ION/src/decision/decision_tree/: CMakeLists.txt  README.md  TestingProgress.txt  decision_tree.cpp  decision_tree.hpp  map_interface.hpp  map_processor.cpp  map_processor.hpp  test.cpp
src/ION/src/decision/move_straight_line/: .MoveStraightLine.cpp.swp  .move_straight_line.cpp.swp  MoveStraightLine.cpp  move_straight_line.cpp
src/ION/src/decision/pathfinder/: AStar.cpp  AStar.cpp~  CMakeLists.txt  CMakeLists.txt~  Pathfinder.cpp  Pathfinder.cpp~
src/ION/src/decision/sb_basic_robot_control/: .sb_basic_robot_control.cpp.swp  CMakeLists.txt  sb_basic_robot_control.cpp
src/ION/src/decision/sb_waypoint_creator/: .sb_waypoint_creator.cpp.swp  CMakeLists.txt  main.cpp  sb_waypoint_creator.cpp
src/ION/src/decision_tree/: decision_tree.hpp  map1_width_6.map  map3_width_10 .txt  map3_width_10.map
src/ION/src/drivers/: CMakeLists.txt
src/ION/src/drivers/src/: .elsa_driver.cpp.swp  CMakeLists.txt  CMakeLists.txt~  Sensor.cpp  SerialCommunication.cpp  SerialCommunication.h  avalanche_driver.cpp  avalanche_driver.h  elsa_driver.cpp  elsa_driver.h
src/ION/src/filters/: CMakeLists.txt
src/ION/src/filters/mapping/src/: README.txt  main.cpp  names.h~
src/ION/src/mapping/: CMakeLists.txt  CMakeLists.txt~  README.md  laser_scan_matcher.launch  package.xml
src/ION/src/mapping/src/: README.txt  main.cpp~  names.h
src/ION/src/mapping/src/C_GlobalMap/: GlobalMap.cpp  GlobalMap.cpp~  README.txt~
src/ION/src/mapping/src/C_Localization/: Localization.cpp  Localization.h
src/ION/test/: CMakeLists.txt
src/ION/test/decision/: CMakeLists.txt  MoveStraightLineTest.cpp
src/decision/: CMakeLists.txt  package.xml
src/decision/include/: MoveStraightLine.hpp
src/decision/launch/: gps_decision.launch  pathfinding.launch  pathfinding_test.launch  test_pathfinding.launch
src/decision/src/: CMakeLists.txt
src/decision/src/gps_decision/: CMakeLists.txt  gps_decision.cpp  gps_decision_test.cpp
src/decision/src/move_straight_line/: CMakeLists.txt  MoveStraightLine.cpp  move_straight_line.cpp
src/decision/src/pathfinding/: CMakeLists.txt  pathfinding.cpp  pathfinding__deprecated.cpp  pub_test_occgrid.cpp  pub_test_posefinal.cpp  pub_test_poseinit.cpp  sub_test_path.cpp  sub_test_point.cpp
src/decision/src/sb_gps_manager/: CMakeLists.txt  sb_gps.cpp  sb_gps.h
src/decision/src/sb_waypoint_creator/: sb_waypoint_creator.cpp
src/decision/srv/: gps_waypoint.srv
src/decision/test/: MoveStraightLineTest.cpp
src/drivers/: CMakeLists.txt  README.md  package.xml
src/drivers/launch/: gps_driver.launch  sensor_driver.launch
src/drivers/msg/: gps.msg
src/drivers/src/: .elsa_driver.cpp.swp  SerialCommunication.cpp  SerialCommunication.h  elsa_driver.cpp  elsa_driver.h  gps_driver(alternative).cpp  gps_driver.cpp  gps_driver.hpp  magic_driver.cpp  sensor_driver.cpp  sensor_driver.hpp
src/messages/: CMakeLists.txt  package.xml
src/messages/msg/: gps.msg
src/opencv/: CMakeLists.txt  package.xml
src/opencv/launch/: camera.launch  dual_cam.launch  dual_image_to_cloud.launch  image_to_cloud.launch  laserscan_to_pointcloud.launch  map_server.launch  mid_cam.launch  midcam.yaml  pointcloud_merger.launch  pointcloud_to_laserscan.launch  ros_filters.launch  uvc_camera.launch
src/opencv/maps/: edc_map.yaml
src/opencv/src/: .IPM.h.swp  .main.cpp.swp  IPM.h  camera.cpp  camera.launch  camera_subscriber.cpp  color_analyzer.cpp  color_picker.cpp  file_testing_vision.cpp  filter.cpp  filter.h  imageToCloud.cpp  imageToCloud.cpp~  image_stitcher.cpp  image_stitcher_optimized.cpp  image_to_laser_scan.cpp  laserscanToPointCloud.cpp  main.cpp  main.cpp~  mouse.cpp  pointCloudMerger.cpp  ros_vision.cpp  ros_vision.cpp~  test.cpp  unit_test.cpp  vision.cpp  vision_node.cpp
src/opencv/src/Testing Files/: pointCloud.cpp  point_cloud_viewer.cpp
src/opencvshenanigans/: CMakeLists.txt  package.xml
src/opencvshenanigans/src/: grays.cpp  imageload.cpp  optical_flow.cpp  webcam.cpp
src/sb_driver/: package.xml
src/sb_driver/src/: avalanche_driver.cpp  elsa_driver.h
src/snowbots/: CMakeLists.txt  package.xml
src/snowbots/cmake-modules/: run_catch_test.py  strip_junit.py
src/snowbots/src/: CMakeLists.txt~
src/snowbots/src/decision_tree/: decision_tree.cpp  decision_tree.hpp  main.cpp  map2_width_10.map  test.cpp
src/snowbots/src/drivers/: README.md
src/snowbots/src/filters/: CMakeLists.txt~  README.md  lidar_filter.cpp
src/snowbots/src/filters/Mapping/: README.txt  README.txt~
src/snowbots/src/filters/MappingNode/: README.txt~
src/snowbots/src/filters/mapping/: CMakeLists.txt  package.xml~
src/snowbots/src/filters/mapping/src/: README.txt  (+1 more)
src/snowbots/src/map/: README.md
src/snowbots/src/path/: README.md
src/tutorial/: CMakeLists.txt  package.xml
src/tutorial/scripts/: SavedMaps.py  TestSub.py  py
src/tutorial/src/: .subscriber.py.swp  cpp.cpp  fizzbuzz.py  subscriber.py
src/tutorial/srv/: prime_request.srv
src/tutorial/standalone/: cpp.cpp  pre.cpp  pre.py
(+133 files in other folders)
