<?xml version="1"?>
<package format="2">

  <name>decision</name>
  <version>0.0.1</version>
  <description>The software to run on UBC Snowbots' Snowflake robot</description>
  <!-- TODO: Add other maintainers -->
  <maintainer email="fhackett.py@gmail.com">Finn Hackett</maintainer>
  <maintainer email="gareth.ellis0@gmail.com">Gareth Ellis</maintainer>
  <license>BSD</license>


  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <depend>roscpp</depend>
  <depend>eigen</depend>
  <buildtool_depend>catkin</buildtool_depend>
  
</package>
