<?xml version="1.0"?>
<package>
  <name>sb_messages</name>
  <version>0.0.0</version>
  <description>Custom message package</description>
  <maintainer email="yuanv@alumni.ubc.ca">Vincent Yuan</maintainer>
  <license>GNU</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
