<?xml version="1"?>
<package format="2">
  <name>tutorial</name>
  <version>1.0.0</version>
  <description>Solutions to the Snowbots challenge</description>
  <maintainer email="fhackett.py@gmail.com">Finn Hackett</maintainer>
  <license>BSD</license>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <buildtool_depend>catkin</buildtool_depend>
</package>
