<?xml version="1.0"?>
<package>
  <name>mapping</name>
  <version>0.0.0</version>
  <description>The mapping package</description>

  <maintainer email="jenniferchingling@gmail.com">Jennifer Ling</maintainer>
  <maintainer email="albertlagman@gmail.com">Albert Lagman</maintainer>
  <maintainer email="justinliang@gmail.com">Justin Liang</maintainer>
  <maintainer email="angychung@gmail.com">Angy Chung</maintainer>
  <maintainer email="traceylui@gmail.com">Tracey Lui</maintainer>
  <maintainer email="jagjotjhajj@gmail.com">Jagjot Jhajj</maintainer>
  <maintainer email="ellechau@gmail.com">Elle Chau</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <url type="website">http://www.snowbots.ca</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
